pull in p2p todomvc, non-pre-release deps

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 </head>
 
 <body>
-
+  <ul>
+    <li><a href="todomvc.html">todomvc.html</a></li>
+    <li><a href="todomvc-p2p.html">todomvc-p2p.html</a></li>
+  </ul>
 </body>
 
 </html>
