rm inllegible text

--- a/todomvc.html
+++ b/todomvc.html
@@ -4,17 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width">
+  <meta name="description" content="vlcn.io TodoMVC example in a client-server sync setup">
   <title>vlcn • TodoMVC</title>
 </head>
 
 <body>
   <section class="todoapp" id="container"></section>
-  <footer class="info">
-    <p>Double-click to edit a todo</p>
-    <p>Written by <a href="http://github.com/tantaman">Matthew Wonlaw</a></p>
-    <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-  </footer>
-
   <script src="src/todomvc/main.tsx" type="module"></script>
 </body>
 
